--- a/org.kevoree.modeling.generator/src/main/resources/vTemplates/DimensionTemplate.vm
+++ b/org.kevoree.modeling.generator/src/main/resources/vTemplates/DimensionTemplate.vm
@@ -2,7 +2,7 @@ package ${context.utilityPackage};
 
 public class ${context.metaModelName}Dimension extends org.kevoree.modeling.api.abs.AbstractKDimension<${context.metaModelName}View, ${context.metaModelName}Dimension, ${context.metaModelName}Universe> {
 
-    protected ${context.metaModelName}Dimension(org.kevoree.modeling.api.KUnivers universe, String key) {
+    protected ${context.metaModelName}Dimension(org.kevoree.modeling.api.KUniverse universe, String key) {
         super(universe, key);
     }
 
