--- a/org.kevoree.modeling.generator/src/main/resources/vTemplates/MetaAttributesTemplate.vm
+++ b/org.kevoree.modeling.generator/src/main/resources/vTemplates/MetaAttributesTemplate.vm
@@ -6,9 +6,10 @@ public enum METAATTRIBUTES implements org.kevoree.modeling.api.meta.MetaAttribut
 #set($attIdx = 0)
 #set($attIdxMax = $context.classDeclaration.attributes.size() - 1)
 #foreach($attribute in $context.classDeclaration.attributes)
-    ${attribute.getName().toUpperCase()}("$attribute.getName()",$attIdx,#if($attribute.learned)true#{else}false#end, #if($attribute.id)true#{else}false#end)#if($attIdx < $attIdxMax),
+    ${attribute.getName().toUpperCase()}("$attribute.getName()",$enumIdx,#if($attribute.get)true#{else}false#end, #if($attribute.id)true#{else}false#end)#if($attIdx < $attIdxMax),
 #{else};
 #end
+#set($enumIdx = $enumIdx + 1)
 #set($attIdx = $attIdx + 1)
 #end
 #end
