--- a/org.kevoree.modeling.generator/src/main/resources/vTemplates/ClassTemplate.vm
+++ b/org.kevoree.modeling.generator/src/main/resources/vTemplates/ClassTemplate.vm
@@ -1,16 +1,35 @@
-package $context.classDeclaration.pack;
+#set($classDeclaration = $context.classDeclaration)
+package $classDeclaration.pack;
 
-public interface $context.classDeclaration.name extends org.kevoree.modeling.api.KObject<$context.classDeclaration.name, ${context.generationContext.metaModelName}View> {
+public interface $classDeclaration.name extends org.kevoree.modeling.api.KObject<$classDeclaration.name, ${context.generationContext.metaModelName}View> {
 
 #set($enumIdx = 0)
 #parse("vTemplates/MetaAttributesTemplate.vm")
 
 #parse("vTemplates/MetaReferencesTemplate.vm")
 
-#foreach($attribute in $context.classDeclaration.attributes)
+#foreach($attribute in $classDeclaration.attributes)
+#if($attribute.single)
     public $attribute.getType() get${context.generationContext.helper.toCamelCase($attribute.getName())}();
-    public ${context.classDeclaration.pack}.${context.classDeclaration.name} set${context.generationContext.helper.toCamelCase($attribute.getName())}($attribute.getType() _value);
+    public ${classDeclaration.pack}.${classDeclaration.name} set${context.generationContext.helper.toCamelCase($attribute.getName())}($attribute.getType() _value);
+#{else}
+    public ${classDeclaration.pack}.${classDeclaration.name} add${context.generationContext.helper.toCamelCase($attribute.getName())}($attribute.getType() _value);
+    public ${classDeclaration.pack}.${classDeclaration.name} remove${context.generationContext.helper.toCamelCase($attribute.getName())}($attribute.getType() _value);
+    public void each${context.generationContext.helper.toCamelCase($attribute.getName())}(org.kevoree.modeling.api.Callback<$attribute.getType()> callback, org.kevoree.modeling.api.Callback<Throwable> end);
+#end
+#end
+
+
+#foreach($rel in $classDeclaration.references)
+#if($rel.single)
+    public void set${context.generationContext.helper.toCamelCase($rel.getName())}($rel.getType().fqn _value, org.kevoree.modeling.api.Callback<Boolean> callback);
+    public void get${context.generationContext.helper.toCamelCase($rel.getName())}(org.kevoree.modeling.api.Callback<$rel.getType().fqn> _value);
+#{else}
+    public void add${context.generationContext.helper.toCamelCase($rel.getName())}($rel.getType().fqn _value, org.kevoree.modeling.api.Callback<Boolean> callback);
+    public void remove${context.generationContext.helper.toCamelCase($rel.getName())}($rel.getType().fqn _value, org.kevoree.modeling.api.Callback<Boolean> callback);
+    public void each${context.generationContext.helper.toCamelCase($rel.getName())}(org.kevoree.modeling.api.Callback<$rel.getType().fqn> callback, org.kevoree.modeling.api.Callback<Throwable> end);
+#end
 #end
 }
-
 #* @vtlvariable name="context" type="org.kevoree.modeling.generator.ClassGenerationContext" *#
+#* @vtlvariable name="classDeclaration" type="org.kevoree.modeling.ast.MModelClass" *#
