--- a/org.kevoree.modeling.generator/src/main/resources/vTemplates/ClassImplTemplate.vm
+++ b/org.kevoree.modeling.generator/src/main/resources/vTemplates/ClassImplTemplate.vm
@@ -27,7 +27,7 @@ public class ${classDeclaration.name}Impl extends org.kevoree.modeling.api.abs.A
 
     @Override
     public ${classDeclaration.pack}.${classDeclaration.name} set${context.generationContext.helper.toCamelCase(${attribute.getName()})}($attribute.getType() _value) {
-        set(METAATTRIBUTES.$attribute.getName().toUpperCase(), _value);
+        set(METAATTRIBUTES.$attribute.getName().toUpperCase(), _value, true);
         return this;
     }
     #{else}
@@ -52,7 +52,7 @@ public class ${classDeclaration.name}Impl extends org.kevoree.modeling.api.abs.A
 #foreach($ref in $classDeclaration.references)
     #if($ref.single)
     @Override
-    public void set${context.generationContext.helper.toCamelCase(${ref.getName()})}(${ref.getType().fqn} _value, org.kevoree.modeling.api.Callback<Boolean> callback) {
+    public void set${context.generationContext.helper.toCamelCase(${ref.getName()})}(${ref.getType().fqn} _value, org.kevoree.modeling.api.Callback<Throwable> callback) {
         mutate(org.kevoree.modeling.api.KActionType.SET, METAREFERENCES.${ref.getName().toUpperCase()}, _value, true, true, callback);
     }
 
@@ -62,12 +62,12 @@ public class ${classDeclaration.name}Impl extends org.kevoree.modeling.api.abs.A
     }
     #{else}
     @Override
-    public void add${context.generationContext.helper.toCamelCase(${ref.getName()})}(${ref.getType().fqn} obj, org.kevoree.modeling.api.Callback<Boolean> callback) {
+    public void add${context.generationContext.helper.toCamelCase(${ref.getName()})}(${ref.getType().fqn} obj, org.kevoree.modeling.api.Callback<Throwable> callback) {
         mutate(org.kevoree.modeling.api.KActionType.ADD, METAREFERENCES.${ref.getName().toUpperCase()}, obj, true, true, callback);
     }
 
     @Override
-    public void remove${context.generationContext.helper.toCamelCase(${ref.getName()})}(${ref.getType().fqn} obj, org.kevoree.modeling.api.Callback<Boolean> callback) {
+    public void remove${context.generationContext.helper.toCamelCase(${ref.getName()})}(${ref.getType().fqn} obj, org.kevoree.modeling.api.Callback<Throwable> callback) {
         mutate(org.kevoree.modeling.api.KActionType.REMOVE, METAREFERENCES.${ref.getName().toUpperCase()}, obj, true, true, callback);
     }
 
