--- a/org.kevoree.modeling.generator/src/main/resources/vTemplates/UniverseTemplate.vm
+++ b/org.kevoree.modeling.generator/src/main/resources/vTemplates/UniverseTemplate.vm
@@ -2,12 +2,12 @@ package $context.utilityPackage;
 
 public class ${context.metaModelName}Universe extends org.kevoree.modeling.api.abs.AbstractKUniverse<${context.metaModelName}Dimension> {
 
-    public ${context.metaModelName}Universe(org.kevoree.modeling.api.data.DataStore dataStore) {
-        super(dataStore);
+    public ${context.metaModelName}Universe(org.kevoree.modeling.api.data.KDataBase kDataBase) {
+        super(kDataBase);
     }
 
     @Override
-    protected ${context.metaModelName}Dimension internal_create(String key) {
+    protected ${context.metaModelName}Dimension internal_create(long key) {
         return new ${context.metaModelName}Dimension(this,key);
     }
 }
