--- a/org.kevoree.modeling.generator/src/main/resources/vTemplates/MetaReferencesTemplate.vm
+++ b/org.kevoree.modeling.generator/src/main/resources/vTemplates/MetaReferencesTemplate.vm
@@ -6,21 +6,20 @@ public enum METAREFERENCES implements org.kevoree.modeling.api.meta.MetaReferenc
 #set($relIdx = 0)
 #set($relIdxMax = $classDeclaration.references.size() - 1)
 #foreach($rel in $classDeclaration.references)
-    ${rel.getName().toUpperCase()}("$rel.getName()",$enumIdx,#if($rel.contained)true#{else}false#end, #if($rel.single)true#{else}false#end, ${context.generationContext.utilityPackage}.${context.generationContext.metaModelName}View.METACLASSES.${rel.getType().getFqn().toUpperCase().replace(".","_")}, #if(!${rel.getOpposite()})null#{else}${rel.getType().getFqn()}.METAREFERENCES.${rel.opposite.name.toUpperCase()}#end)#if($relIdx < $relIdxMax),
+    ${rel.getName().toUpperCase()}("$rel.getName()",$enumIdx,#if($rel.contained)true#{else}false#end, #if($rel.single)true#{else}false#end, ${context.generationContext.utilityPackage}.${context.generationContext.metaModelName}View.METACLASSES.${rel.getType().getFqn().toUpperCase().replace(".","_")})#if($relIdx < $relIdxMax),
 #{else};
 #end
     #set($enumIdx = $enumIdx + 1)
     #set($relIdx = $relIdx + 1)
 #end
 #end
-    private String name;
+    private final String name;
 
-    private int index;
+    private final int index;
 
-    private boolean contained;
-    private boolean single;
-    private org.kevoree.modeling.api.meta.MetaClass metaType;
-    private org.kevoree.modeling.api.meta.MetaReference opposite;
+    private final boolean contained;
+    private final boolean single;
+    private final org.kevoree.modeling.api.meta.MetaClass metaType;
 
     public int index() {
         return index;
@@ -43,20 +42,25 @@ public enum METAREFERENCES implements org.kevoree.modeling.api.meta.MetaReferenc
     }
 
     public org.kevoree.modeling.api.meta.MetaReference opposite() {
-        return opposite;
+        switch(this) {
+#foreach($rel in $classDeclaration.references)
+#if(${rel.getOpposite()})case ${rel.getName().toUpperCase()} : return ${rel.getType().getFqn()}.METAREFERENCES.${rel.opposite.name.toUpperCase()};
+#end
+#end
+            default: return null;
+        }
     }
 
     public org.kevoree.modeling.api.meta.MetaClass origin(){
         return ${context.generationContext.utilityPackage}.${context.generationContext.metaModelName}View.METACLASSES.${classDeclaration.fqn.toUpperCase().replace(".","_")};
     }
 
-    METAREFERENCES(String name, int index, boolean contained, boolean single, org.kevoree.modeling.api.meta.MetaClass metaType, org.kevoree.modeling.api.meta.MetaReference opposite) {
+    METAREFERENCES(String name, int index, boolean contained, boolean single, org.kevoree.modeling.api.meta.MetaClass metaType) {
         this.name = name;
         this.index = index;
         this.contained = contained;
         this.single = single;
         this.metaType = metaType;
-        this.opposite = opposite;
     }
 }
 
