--- a/org.kevoree.modeling.generator/src/main/resources/vTemplates/ViewImplTemplate.vm
+++ b/org.kevoree.modeling.generator/src/main/resources/vTemplates/ViewImplTemplate.vm
@@ -7,7 +7,7 @@ public class ${context.metaModelName}ViewImpl extends org.kevoree.modeling.api.a
     }
 
     @Override
-    protected org.kevoree.modeling.api.KObject internalCreate(org.kevoree.modeling.api.meta.MetaClass clazz, org.kevoree.modeling.api.time.TimeTree timeTree) {
+    protected org.kevoree.modeling.api.KObject internalCreate(org.kevoree.modeling.api.meta.MetaClass clazz, org.kevoree.modeling.api.time.TimeTree timeTree, Long key) {
         if (clazz == null) {
             return null;
         }
@@ -20,7 +20,7 @@ public class ${context.metaModelName}ViewImpl extends org.kevoree.modeling.api.a
 #foreach($class in $context.classDeclarationsList.keySet())
     #set($lastIdx = $class.lastIndexOf(".")+1)
             case $clsIdx:
-                return manageCache(new ${class.substring(0,$class.lastIndexOf("."))}.impl.${class.substring($lastIdx)}Impl(this, METACLASSES.$class.toUpperCase().replace(".","_"), dimension().universe().storage().nextObjectKey(), now(), dimension(), resolvedTimeTree));
+                return manageCache(new ${class.substring(0,$class.lastIndexOf("."))}.impl.${class.substring($lastIdx)}Impl(this, METACLASSES.$class.toUpperCase().replace(".","_"), key, now(), dimension(), resolvedTimeTree));
 #set($clsIdx = $clsIdx+1)
 #end
             default:
