--- a/org.kevoree.modeling.generator/src/main/resources/vTemplates/ClassTemplate.vm
+++ b/org.kevoree.modeling.generator/src/main/resources/vTemplates/ClassTemplate.vm
@@ -30,6 +30,7 @@ public interface $classDeclaration.name extends org.kevoree.modeling.api.KObject
     public void add${context.generationContext.helper.toCamelCase($rel.getName())}($rel.getType().fqn _value);
     public void remove${context.generationContext.helper.toCamelCase($rel.getName())}($rel.getType().fqn _value);
     public void each${context.generationContext.helper.toCamelCase($rel.getName())}(org.kevoree.modeling.api.Callback<$rel.getType().fqn> callback, org.kevoree.modeling.api.Callback<Throwable> end);
+    public int sizeOf${context.generationContext.helper.toCamelCase($rel.getName())}();
 #end
 #end
 
